プライバシーポリシーにアプリ内課金機能に関する記述を追加
- 開発者支援（投げ銭）機能についての説明を追加
- AppleのStoreKitを通じた決済処理について明記
- 決済情報はAppleが管理し、開発者はアクセスできないことを明記
- 個人情報は収集しないことを再確認
- 最終更新日を2025年11月12日に更新

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h1>SimpleBreathe サポート & プライバシーポリシー</h1>
             
             <div class="last-updated">
-                最終更新日：2025年9月10日
+                最終更新日：2025年11月12日
             </div>
 
             <h2>📱 アプリサポート</h2>
@@ -148,7 +148,17 @@
             </ul>
             <p>これらのデータは外部サーバーに送信されることは一切ありません。</p>
 
-            <h2>3. 第三者との情報共有</h2>
+            <h2>3. アプリ内課金について</h2>
+            <p>SimpleBreatheでは、開発者支援（投げ銭）機能を提供しています。この機能に関する重要な情報：</p>
+            <ul>
+                <li><strong>決済処理：</strong>すべての決済処理は、AppleのStoreKitを通じて行われます。開発者は決済情報にアクセスすることはできません。</li>
+                <li><strong>決済情報：</strong>クレジットカード情報、決済履歴などの決済に関する情報は、すべてAppleが管理しており、開発者には提供されません。</li>
+                <li><strong>個人情報の収集：</strong>課金機能を使用しても、開発者が個人情報を収集することはありません。決済は完全にAppleのシステムを通じて処理されます。</li>
+                <li><strong>購入履歴：</strong>購入履歴はAppleのシステムに保存され、開発者は個別の購入履歴を確認することはできません。</li>
+            </ul>
+            <p>課金機能を使用するかどうかは任意であり、課金を行わなくてもアプリのすべての機能を無料でご利用いただけます。</p>
+
+            <h2>4. 第三者との情報共有</h2>
             <p>SimpleBreatheは個人情報を収集しないため、第三者と情報を共有することはありません。また、以下のサービスも使用していません：</p>
             <ul>
                 <li>分析サービス（Google Analytics等）</li>
@@ -186,7 +196,7 @@
             <h1>SimpleBreathe Support & Privacy Policy</h1>
             
             <div class="last-updated">
-                Last updated: September 10, 2025
+                Last updated: November 12, 2025
             </div>
 
             <h2>📱 App Support</h2>
@@ -239,7 +249,17 @@
             </ul>
             <p>This data is never transmitted to external servers.</p>
 
-            <h2>3. Information Sharing</h2>
+            <h2>3. In-App Purchases</h2>
+            <p>SimpleBreathe offers a developer support (donation) feature. Important information about this feature:</p>
+            <ul>
+                <li><strong>Payment Processing:</strong> All payment processing is handled through Apple's StoreKit. The developer does not have access to payment information.</li>
+                <li><strong>Payment Information:</strong> Payment-related information such as credit card details and payment history is managed entirely by Apple and is not provided to the developer.</li>
+                <li><strong>Personal Information Collection:</strong> Using the donation feature does not result in the developer collecting any personal information. Payments are processed entirely through Apple's system.</li>
+                <li><strong>Purchase History:</strong> Purchase history is stored in Apple's system, and the developer cannot view individual purchase histories.</li>
+            </ul>
+            <p>Use of the donation feature is optional, and all app features remain free to use without making a donation.</p>
+
+            <h2>4. Information Sharing</h2>
             <p>Since SimpleBreathe does not collect personal information, we do not share information with third parties. We also do not use:</p>
             <ul>
                 <li>Analytics services (such as Google Analytics)</li>
